Fri Jan  2 23:33:38 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* include/ruby/missing.h, sprintf.c: get rid of a warning of VC++.

Fri Jan  2 10:20:24 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* lib/singleton.rb: fix documentation. [ruby-core:21038]

Fri Jan  2 22:25:46 2009  Yusuke Endoh  <mame@tsg.ne.jp>

	* process.c: use sigaction instead of sigset.  [ruby-core:21021]

Fri Jan  2 22:20:46 2009  Yusuke Endoh  <mame@tsg.ne.jp>

	* test/ruby/test_process.rb (test_wait_and_sigchild): remove debug
	  output.

Fri Jan  2 06:43:58 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* signal.c (rb_signal_buff_size): defined for check whether signal
	  is in the buffer or not.

	* thread_pthread.c (thread_timer): don't exit the loop when signal
	  is in the buffer. [ruby-dev:37637]

Thu Jan  1 22:27:55 2009  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* spec/default.mspec: fix for builddir != srcdir

	* Makefile.in: ditto.

Thu Jan  1 20:50:09 2009  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* process.c (before_exec): it makes no sense for a conditional
	  expression to return a void value.

Thu Jan  1 15:08:46 2009  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* tool/flie2lastrev.rb: supports git repositories which are cloned
	  from a git-svn gateway.
	  Patch by Hongli Lai. [ruby-core:21020]

Thu Jan  1 07:42:36 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* lib/singleton.rb: fix indentation of RDoc text.  [ruby-core:21029]

Thu Jan  1 07:16:44 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* Makefile.in (distclean-ext, realclean-ext): use EXTS as default.

	* win32/Makefile.sub (distclean-ext, realclean-ext): try to remove ext
	  directory.

Thu Jan  1 06:56:28 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* tool/file2lastrev.rb: unset PWD.

Wed Dec 31 14:12:35 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* object.c (rb_to_float): replaced by to_flo definition from
	  math.c  [ruby-dev:37668]

	* math.c (Need_Float): use rb_to_float().
